Draft front page

--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
-My GitHub Page
+---
+layout: default
+title: Your New Jekyll Site
+---
+
+<header>
+    <div class="hero">
+        <h1>{{ site.name}}</h1>
+        <p>Create maps for public good</p>
+    </div>
+</header>
+
+<section id="communities">
+    <h2><span>Communities</span> Create your own map</h2>
+    <p>Whether you want to map the history of your neighbourhood, collect data to identify issues that should be fixed by your local government or simply map hidden gems in your area&mdash;[The platform] can help.</p>
+    <p><a href="#" class="btn">Start mapping today</a></p>
+</section>
+
+<section id="developers">
+    <h2><span>Developers</span> Build mobile and web apps</h2>
+    <p>Use our public API to create your own mobile app to collect data, visualise your data in a GIS or run complex statistical analysis on your data.</p>
+    <p><a href="#" class="btn">Start coding</a></p>
+</section>
