Added blog and about sections to the front-page

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 ---
 layout: default
-title: Your New Jekyll Site
+title: [The Platform]
 ---
 
 <header>
     <div class="hero">
-        <h1>{{ site.name}}</h1>
+        <h1>{{site.name}}</h1>
         <p>Create maps for public good</p>
     </div>
 </header>
@@ -13,11 +13,36 @@ title: Your New Jekyll Site
 <section id="communities">
     <h2><span>Communities</span> Create your own map</h2>
     <p>Whether you want to map the history of your neighbourhood, collect data to identify issues that should be fixed by your local government or simply map hidden gems in your area&mdash;[The platform] can help.</p>
-    <p><a href="#" class="btn">Start mapping today</a></p>
+    <p><a href="/mapping/" class="btn">Start mapping today</a></p>
 </section>
 
 <section id="developers">
     <h2><span>Developers</span> Build mobile and web apps</h2>
     <p>Use our public API to create your own mobile app to collect data, visualise your data in a GIS or run complex statistical analysis on your data.</p>
     <p><a href="#" class="btn">Start coding</a></p>
+</section>
+
+<section id="blog">
+    <h2><span>From the Blog</span></h2>
+    
+    <article>
+        <h3>Plugin for EpiCollect released.</h3>
+        <p>Use EpiCollect5 to collect data for the platform. </p>
+    </article>
+
+    <ul>
+        <li><a href="#">Version 0.1 released.</a></li>
+        <li><a href="#">A welcome note</a></li>
+        <li><a href="#" class="btn">Read all news in the blog</a></li>
+    </ul>
+</section>
+
+<section id="about">
+    <div id="platform">
+        <h2><span>About the platform</span></h2>
+        <p>The platform has been developed at <a href="http://www.ucl.ac.uk/excites">Extreme Citizen Science Research Group</a> at University College London. The development of the initial version was part of FP-7 project <a href="http://citizencyberlab.eu/">Citizen Cyberlab</a>. </p>
+    </div>
+    <div id="devs">
+        <h2><span>Meet the team</span></h2>
+    </div>
 </section>
