--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title: [The Platform]
 ---
 
-<header>
+<header class="main">
     <div class="hero">
         <h1>{{site.name}}</h1>
         <p>Create maps for public good</p>
@@ -13,7 +13,7 @@ title: [The Platform]
 <section id="communities">
     <h2><span>Communities</span> Create your own map</h2>
     <p>Whether you want to map the history of your neighbourhood, collect data to identify issues that should be fixed by your local government or simply map hidden gems in your area&mdash;[The platform] can help.</p>
-    <p><a href="/mapping/" class="btn">Start mapping today</a></p>
+    <p><a href="/communities/" class="btn">Start mapping today</a></p>
 </section>
 
 <section id="developers">
