--- a/index.html
+++ b/index.html
@@ -10,16 +10,18 @@ title: [The Platform]
     </div>
 </header>
 
-<section id="communities">
-    <h2><span>Communities</span> Create your own map</h2>
-    <p>Whether you want to map the history of your neighbourhood, collect data to identify issues that should be fixed by your local government or simply map hidden gems in your area&mdash;[The platform] can help.</p>
-    <p><a href="/communities/" class="btn">Start mapping today</a></p>
-</section>
+<section>
+    <div id="communities">
+        <h2><span>Communities</span> Create your own map</h2>
+        <p>Whether you want to map the history of your neighbourhood, collect data to identify issues that should be fixed by your local government or simply map hidden gems in your area&mdash;[The platform] can help.</p>
+        <p><a href="/communities/" class="btn">Start mapping today</a></p>
+    </div>
 
-<section id="developers">
-    <h2><span>Developers</span> Build mobile and web apps</h2>
-    <p>Use our public API to create your own mobile app to collect data, visualise your data in a GIS or run complex statistical analysis on your data.</p>
-    <p><a href="#" class="btn">Start coding</a></p>
+    <div id="developers">
+        <h2><span>Developers</span> Build mobile and web apps</h2>
+        <p>Use our public API to create your own mobile app to collect data, visualise your data in a GIS or run complex statistical analysis on your data.</p>
+        <p><a href="#" class="btn">Start coding</a></p>
+    </div>
 </section>
 
 <section id="blog">
@@ -44,5 +46,18 @@ title: [The Platform]
     </div>
     <div id="devs">
         <h2><span>Meet the team</span></h2>
+        <ul>
+            <li>
+                <img src="/build/img/persons/peter.png">
+                <h3>Peter Griffin</h3>
+                <p>Master mind</p>
+            </li>
+            <li>
+                <img src="/build/img/persons/homer.jpg">
+                <h3>Homer Simpson</h3>
+                <p>Lead developer</p>
+            </li>
+
+        </ul>
     </div>
 </section>
