Cleaned grid structure

--- a/communities/index.html
+++ b/communities/index.html
@@ -11,28 +11,40 @@ title: "[The Platform] - Start mapping today"
 </header>
 
 <section>
-    <h2>Set up your own mapping projects</h2>
-    <ul>
-        <li><a href="#">Create a new project</a></li>
-        <li><a href="#">Define forms to collect data</a></li>
-        <li><a href="#">Define maps to provide access to your data</a></li>
-        <li><a href="#">Grant permissions to users</a></li>
-    </ul>
+    <div class="content">
+        <div class="row">
+            <h2>Set up your own mapping projects</h2>
+            <ul>
+                <li><a href="#">Create a new project</a></li>
+                <li><a href="#">Define forms to collect data</a></li>
+                <li><a href="#">Define maps to provide access to your data</a></li>
+                <li><a href="#">Grant permissions to users</a></li>
+            </ul>
+        </div>
+    </div>
 </section>
 
 <section>
-    <h2>Collect data</h2>
-    <ul>
-        <li><a href="#">Collect data using EpiCollect5</a></li>
-        <li><a href="#">Collect data using Community Maps</a></li>
-    </ul>
+    <div class="content">
+        <div class="row">
+            <h2>Collect data</h2>
+            <ul>
+                <li><a href="#">Collect data using EpiCollect5</a></li>
+                <li><a href="#">Collect data using Community Maps</a></li>
+            </ul>
+        </div>
+    </div>
 </section>
 
 <section>
-    <h2>Visualise and analyse data</h2>
-    <ul>
-        <li><a href="#">Visualise your data with QGIS</a></li>
-        <li><a href="#">Visualise your data with ArcGIS</a></li>
-        <li><a href="#">Visualise your data on the Web</a></li>
-    </ul>
+    <div class="content">
+        <div class="row">
+            <h2>Visualise and analyse data</h2>
+            <ul>
+                <li><a href="#">Visualise your data with QGIS</a></li>
+                <li><a href="#">Visualise your data with ArcGIS</a></li>
+                <li><a href="#">Visualise your data on the Web</a></li>
+            </ul>
+        </div>
+    </div>
 </section>
