--- a/index.html
+++ b/index.html
@@ -11,53 +11,62 @@ title: [The Platform]
 </header>
 
 <section>
-    <div id="communities">
-        <h2><span>Communities</span> Create your own map</h2>
-        <p>Whether you want to map the history of your neighbourhood, collect data to identify issues that should be fixed by your local government or simply map hidden gems in your area&mdash;[The platform] can help.</p>
-        <p><a href="/communities/" class="btn">Start mapping today</a></p>
-    </div>
+    <div class="row">
+        <div id="communities" class="item">
+            <h2><span>Communities</span> Create your own map</h2>
+            <p>Whether you want to map the history of your neighbourhood, collect data to identify issues that should be fixed by your local government or simply map hidden gems in your area&mdash;[The platform] can help.</p>
+            <p><a href="/communities/" class="btn">Start mapping today</a></p>
+        </div>
 
-    <div id="developers">
-        <h2><span>Developers</span> Build mobile and web apps</h2>
-        <p>Use our public API to create your own mobile app to collect data, visualise your data in a GIS or run complex statistical analysis on your data.</p>
-        <p><a href="#" class="btn">Start coding</a></p>
+        <div id="developers" class="item">
+            <h2><span>Developers</span> Build mobile and web apps</h2>
+            <p>Use our public API to create your own mobile app to collect data, visualise your data in a GIS or run complex statistical analysis on your data.</p>
+            <p><a href="/developers/" class="btn">Start coding</a></p>
+        </div>
     </div>
 </section>
 
 <section id="blog">
-    <h2><span>From the Blog</span></h2>
-    
-    <article>
-        <h3>Plugin for EpiCollect released.</h3>
-        <p>Use EpiCollect5 to collect data for the platform. </p>
-    </article>
+    <div class="row">
+        <div class="item latest">
+            <h2><span>Read the latest news</span>Plugin for EpiCollect released.</h2>
+            <p>Mauris vitae augue ac erat dapibus fermentum ac in magna. In non felis fermentum, venenatis nunc non, maximus nibh. Fusce lobortis libero non leo volutpat ullamcorper. Donec mi augue, suscipit ut ex vel, bibendum auctor nulla. Donec et.</p>
+        </div>
 
-    <ul>
-        <li><a href="#">Version 0.1 released.</a></li>
-        <li><a href="#">A welcome note</a></li>
-        <li><a href="#" class="btn">Read all news in the blog</a></li>
-    </ul>
+        <div class="item archive">
+            <h2><span>From the archives</span></h2>
+            <ul>
+                <li><a href="#">Version 0.1 released.</a></li>
+                <li><a href="#">A welcome note</a></li>
+                <li><a href="#" class="btn">Read all news in the blog</a></li>
+            </ul>
+        </div>
+    </div>
 </section>
 
 <section id="about">
-    <div id="platform">
-        <h2><span>About the platform</span></h2>
-        <p>The platform has been developed at <a href="http://www.ucl.ac.uk/excites">Extreme Citizen Science Research Group</a> at University College London. The development of the initial version was part of FP-7 project <a href="http://citizencyberlab.eu/">Citizen Cyberlab</a>. </p>
+    <div class="row">
+        <div id="platform" class="item">
+            <h2><span>About the platform</span></h2>
+            <p>The platform has been developed at <a href="http://www.ucl.ac.uk/excites">Extreme Citizen Science Research Group</a> at University College London. The development of the initial version was part of FP-7 project <a href="http://citizencyberlab.eu/">Citizen Cyberlab</a>. </p>
+        </div>
     </div>
-    <div id="devs">
-        <h2><span>Meet the team</span></h2>
-        <ul>
-            <li>
-                <img src="/build/img/persons/peter.png">
-                <h3>Peter Griffin</h3>
-                <p>Master mind</p>
-            </li>
-            <li>
-                <img src="/build/img/persons/homer.jpg">
-                <h3>Homer Simpson</h3>
-                <p>Lead developer</p>
-            </li>
+    <div class="row">
+        <div id="devs" class="item">
+            <h2><span>Meet the team</span></h2>
+            <ul>
+                <li>
+                    <img src="/build/img/persons/peter.png">
+                    <h3>Peter Griffin</h3>
+                    <p>Master mind</p>
+                </li>
+                <li>
+                    <img src="/build/img/persons/homer.jpg">
+                    <h3>Homer Simpson</h3>
+                    <p>Lead developer</p>
+                </li>
 
-        </ul>
+            </ul>
+        </div>
     </div>
 </section>
