New massive iteration, including blog

--- a/communities/index.html
+++ b/communities/index.html
@@ -4,6 +4,7 @@ title: "[The Platform] - Start mapping today"
 ---
 
 <header>
+    {% include nav.html %}
     <div class="hero">
         <h1>Communities</h1>
         <p>Learn how to set up your own projects and how to use the collected data.</p>
