--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: [The Platform]
+title: Winjee
 ---
 
 <header class="main">
@@ -31,7 +31,7 @@ title: [The Platform]
         <div class="item latest">
             <h2><span>Read the latest news</span>{{ site.posts.first.title }}</h2>
             {{ site.posts.first.excerpt }}
-            <p><a href="{{ site.posts.first.url }}" class="no-underline"><span class="octicon octicon-arrow-right"></span> Read more</a></p>
+            <p class="centered"><a href="{{ site.posts.first.url }}" class="no-underline"><span class="octicon octicon-arrow-right"></span> Read more</a></p>
         </div>
 
         <div class="item archive">
