--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@ title: Winjee
         <div id="communities" class="item">
             <h2><span>Communities</span> Create your own map</h2>
             <p>Whether you want to map the history of your neighbourhood, collect data to identify issues that should be fixed by your local government or simply map hidden gems in your area&mdash;[The platform] can help.</p>
-            <p><a href="/communities/" class="btn">Start mapping today</a></p>
+            <p><a href="{{site.url}}communities/" class="btn">Start mapping today</a></p>
         </div>
 
         <div id="developers" class="item">
             <h2><span>Developers</span> Build mobile and web apps</h2>
             <p>Use our public API to create your own mobile app to collect data, visualise your data in a GIS or run complex statistical analysis on your data.</p>
-            <p><a href="/developers/" class="btn">Start coding</a></p>
+            <p><a href="{{site.url}}developers/" class="btn">Start coding</a></p>
         </div>
     </div>
 </section>
@@ -42,7 +42,7 @@ title: Winjee
                 <li><a href="{{ post.url }}">{{ post.title }}</a></li>
                 {% endif %}    
             {% endfor %}
-                <li><a href="/blog/" class="btn">Read all news in the blog</a></li>
+                <li><a href="{{site.url}}blog/" class="btn">Read all news in the blog</a></li>
             </ul>
         </div>
     </div>
@@ -60,12 +60,12 @@ title: Winjee
             <h2><span>Meet the team</span></h2>
             <ul>
                 <li>
-                    <img src="/build/img/persons/peter.png">
+                    <img src="build/img/persons/peter.png">
                     <h3>Peter Griffin</h3>
                     <p>Master mind</p>
                 </li>
                 <li>
-                    <img src="/build/img/persons/homer.jpg">
+                    <img src="build/img/persons/homer.jpg">
                     <h3>Homer Simpson</h3>
                     <p>Lead developer</p>
                 </li>
