--- a/tutorials/index.html
+++ b/tutorials/index.html
@@ -1,7 +1,14 @@
 ---
-layout: tutorial
+layout: default
 title: "[The Platform] - Tutorials"
 ---
+
+<header>
+    {% include nav.html %}
+    <div class="hero">
+        <h1>Tutorials</h1>
+    </div>
+</header>
 
 <section>
     <div class="content">
