Create category tutorial

--- a/tutorials/index.html
+++ b/tutorials/index.html
@@ -13,9 +13,13 @@ title: "[The Platform] - Tutorials"
 <section>
     <div class="content">
         <div class="row">
-            <h2>Set up and mange projects</h2>
+            <h2>Setting up and manging projects</h2>
             <ul>
-                <li><a href="how-to-create-project.html">Create a new project</a></li>
+                <li><a href="how-to-create-project.html">How to create a new project</a></li>
+                <li><a href="change-settings-of-project.html">Changing the settings of a project</a></li>
+                <li><a href="how-to-setup-categories.html">How to setup categories for data collection</a></li>
+                <li><a href="change-settings-of-category.html">Changing the settings of a category</a></li>
+                <li><a href="change-settings-of-field.html">Changing the settings of a field</a></li>
             </ul>
         </div>
     </div>
