--- a/index.html
+++ b/index.html
@@ -11,66 +11,73 @@ title: Community Maps
 </header>
 
 <section id="where-to-go">
-    <div class="row">
-        <div id="communities" class="item">
-            <h2><span>Communities</span> Create your own map</h2>
-            <p>Whether you want to map the history of your neighbourhood, collect data to identify issues that should be fixed by your local government or simply map hidden gems in your area&mdash;[The platform] can help.</p>
-            <p><a href="{{site.url}}communities/" class="btn">Start mapping today</a></p>
-        </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-6">
+                <h2><span>Communities</span> Create your own map</h2>
+                <p>Whether you want to map the history of your neighbourhood, collect data to identify issues that should be fixed by your local government or simply map hidden gems in your area&mdash;[The platform] can help.</p>
+                <p><a href="{{site.url}}communities/" class="btn">Start mapping today</a></p>
+            </div>
 
-        <div id="developers" class="item">
-            <h2><span>Developers</span> Build mobile and web apps</h2>
-            <p>Use our public API to create your own mobile app to collect data, visualise your data in a GIS or run complex statistical analysis on your data.</p>
-            <p><a href="{{site.url}}developers/" class="btn">Start coding</a></p>
+            <div class="col-sm-6">
+                <h2><span>Developers</span> Build mobile and web apps</h2>
+                <p>Use our public API to create your own mobile app to collect data, visualise your data in a GIS or run complex statistical analysis on your data.</p>
+                <p><a href="{{site.url}}developers/" class="btn">Start coding</a></p>
+            </div>
         </div>
     </div>
 </section>
 
 <section id="blog">
-    <div class="row">
-        <div class="item latest">
-            <h2><span>Read the latest news</span>{{ site.posts.first.title }}</h2>
-            {{ site.posts.first.excerpt }}
-            <p class="centered"><a href="{{ site.url }}{{ site.posts.first.url }}" class="no-underline"><span class="octicon octicon-arrow-right"></span> Read more</a></p>
-        </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-8">
+                <h2><span>Read the latest news</span>{{ site.posts.first.title }}</h2>
+                {{ site.posts.first.excerpt }}
+                <p class="centered"><a href="{{ site.url }}{{ site.posts.first.url }}" class="no-underline"><span class="octicon octicon-arrow-right"></span> Read more</a></p>
+            </div>
 
-        <div class="item archive">
-            <h2><span>From the archives</span></h2>
-            <ul>
-            {% for post in site.posts limit:7 %}
-                {% if forloop.index0 > 0 %}
-                <li><a href="{{ site.url }}{{ post.url }}">{{ post.title }}</a></li>
-                {% endif %}    
-            {% endfor %}
-                <li><a href="{{ site.url }}blog/" class="btn">Read all news in the blog</a></li>
-            </ul>
+            <div class="archive col-sm-4">
+                <h2><span>From the archives</span></h2>
+                <ul>
+                {% for post in site.posts limit:7 %}
+                    {% if forloop.index0 > 0 %}
+                    <li><a href="{{ site.url }}{{ post.url }}">{{ post.title }}</a></li>
+                    {% endif %}    
+                {% endfor %}
+                    <li><a href="{{ site.url }}blog/" class="btn">Read all news in the blog</a></li>
+                </ul>
+            </div>
         </div>
     </div>
 </section>
 
 <section id="about">
-    <div class="row">
-        <div id="platform" class="item">
-            <h2><span>About the platform</span></h2>
-            <p>The platform has been developed at <a href="http://www.ucl.ac.uk/excites">Extreme Citizen Science Research Group</a> at University College London. The development of the initial version was part of FP-7 project <a href="http://citizencyberlab.eu/">Citizen Cyberlab</a>. </p>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-8">
+                <h2><span>About the platform</span></h2>
+                <p>The platform has been developed at <a href="http://www.ucl.ac.uk/excites">Extreme Citizen Science Research Group</a> at University College London. The development of the initial version was part of FP-7 project <a href="http://citizencyberlab.eu/">Citizen Cyberlab</a>. </p>
+            </div>
         </div>
-    </div>
-    <div class="row">
-        <div id="devs" class="item">
-            <h2><span>Meet the team</span></h2>
-            <ul>
-                <li>
-                    <img src="build/img/persons/peter.png">
-                    <h3>Peter Griffin</h3>
-                    <p>Master mind</p>
-                </li>
-                <li>
-                    <img src="build/img/persons/homer.jpg">
-                    <h3>Homer Simpson</h3>
-                    <p>Lead developer</p>
-                </li>
 
-            </ul>
+        <div class="row" id="devs">
+            <div class="col-sm-12">
+                <h2><span>Meet the team</span></h2>
+                <ul>
+                    <li>
+                        <img src="build/img/persons/peter.png">
+                        <h3>Peter Griffin</h3>
+                        <p>Master mind</p>
+                    </li>
+                    <li>
+                        <img src="build/img/persons/homer.jpg">
+                        <h3>Homer Simpson</h3>
+                        <p>Lead developer</p>
+                    </li>
+
+                </ul>
+            </div>
         </div>
     </div>
 </section>
