Register your app tutorial

--- a/developers/index.html
+++ b/developers/index.html
@@ -29,9 +29,18 @@ title: "[The Platform] - Build your own app"
                 <p>Whether you want to build a client for data collection, create a sophisticated visualisation of your data or statiscally analyse the data — use our REST API to get connected.</p>
 
                 <ul class="tutorial-links">
-                    <li><a href="{{site.url}}help/getting-started-with-oauth.html">Getting started with OAuth</a></li>
-                    <li>How to obtain OAuth tokens for your app</li>
-                    <li><a href="https://github.com/ExCiteS/opencommunitymaps/wiki">Read the docs to get started</a></li>
+                    <li>
+                        <h6><a href="{{site.url}}help/register-your-app.html">Register your app</a></h6>
+                        <p>Before you can use our API you need to register your app.</p>
+                    </li>
+                    <li>
+                        <h6><a href="{{site.url}}help/getting-started-with-oauth.html">Getting started with OAuth</a></h6>
+                        <p>Learn how to obtain OAuth tokens and how to sign your request to authenticate and authorise users.</p>
+                    </li>
+                    <li>
+                        <h6><a href="https://github.com/ExCiteS/opencommunitymaps/wiki">Read the API docs</a></h6>
+                        <p>Find out which API endpoints to use to get information on projects and how to add, read and update contributions.</p>
+                    </li>
                 </ul>
             </div>
         </div>
