--- a/developers/index.html
+++ b/developers/index.html
@@ -19,8 +19,10 @@ title: "[The Platform] - Build your own app"
                 <p>You want to run your own independent service? Learn how to deploy the code on your system and how to keep the system up to date.</p>
 
                 <ul class="tutorial-links">
-                    <li><a href="#">How to install</a> </li>
-                    <li><a href="#">How to update</a></li>
+                    <li>
+                        <h6><a href="#">How to install</a></h6>
+                        <p>A complete guide to installing [the platform] on a Debian system with Apache and mod_wsgi.</p>
+                    </li>
                 </ul>
             </div>
 
@@ -38,7 +40,7 @@ title: "[The Platform] - Build your own app"
                         <p>Learn how to obtain OAuth tokens and how to sign your request to authenticate and authorise users.</p>
                     </li>
                     <li>
-                        <h6><a href="https://github.com/ExCiteS/opencommunitymaps/wiki">Read the API docs</a></h6>
+                        <h6><a href="{{site.url}}docs/">Read the API docs</a></h6>
                         <p>Find out which API endpoints to use to get information on projects and how to add, read and update contributions.</p>
                     </li>
                 </ul>
