How to install tutorial

--- a/developers/index.html
+++ b/developers/index.html
@@ -20,7 +20,7 @@ title: "[The Platform] - Build your own app"
 
                 <ul class="tutorial-links">
                     <li>
-                        <h6><a href="#">How to install</a></h6>
+                        <h6><a href="{{site.url}}help/how-to-install.html">How to install</a></h6>
                         <p>A complete guide to installing [the platform] on a Debian system with Apache and mod_wsgi.</p>
                     </li>
                 </ul>
