How to add fields

--- a/help/index.html
+++ b/help/index.html
@@ -17,29 +17,52 @@ title: "[The Platform] - Help"
                 <h2>Getting started</h2>
                 <ul class="tutorial-links">
                     <li>
-                        <a href="getting-started.html">Getting started — An overview of the platform</a><br>
-                        Get an idea about what you can do with the platform and how you can set up projects. 
+                        <h6><a href="getting-started.html">Getting started — An overview of the platform</a></h6>
+                        <p>Learn about what you can do with the platform and how you can set up projects.</p>
                     </li>
-                    <li><a href="how-to-create-project.html">How to create a new project</a></li>
-                    <li><a href="how-to-setup-categories.html">How to setup categories for data collection</a></li>
-                    <li>How users can access the data in your project</li>
+                    <li>
+                        <h6><a href="how-to-create-project.html">How to create a new project</a></h6>
+                    </li>
+                    <li>
+                        <h6><a href="how-to-setup-categories.html">How to setup categories for data collection</a></h6>
+                    </li>
+                    <li>
+                        <h6><a href="how-to-create-field.html">How to create fields for a category</a></h6>
+                        <p>Learn how to add fields to your category.</p>
+                    </li>
+                    <li>
+                        <h6>How users can access the data in your project</h6>
+                    </li>
                 </ul>
             </div>
-        </div>
-    </div>
-</section>
 
-<section>
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-12">
+            <div class="col-sm-6">
                 <h2>Managing projects</h2>
                 <ul class="tutorial-links">
-                    <li><a href="change-settings-of-project.html">Changing the settings of a project</a></li>
-                    <li><a href="change-settings-of-category.html">Changing the settings of a category</a></li>
-                    <li><a href="change-settings-of-field.html">Changing the settings of a field</a></li>
-                    <li>Add and remove users to user groups</li>
-                    <li>Granting permissions to user groups</li>
+                    <li>
+                        <h6><a href="project-settings.html">Project settings</a></h6>
+                    </li>
+                    <li>
+                        <h6><a href="category-display.html">Category display settings</a></h6>
+                        <p>Define how your contributions will be displayed on the map.</p>
+                    </li>
+                    <li>
+                        <h6><a href="category-settings.html">Category settings</a></h6>
+                    </li>
+                    <li>
+                        <h6><a href="field-types.html">Field types</a></h6>
+                        <p>Learn about different field types and what you can do with them.</p>
+                    </li>
+                    <li>
+                        <h6><a href="field-settings.html">Field settings</a></h6>
+                        <p>Learn about which settings you can change for your field.</p>
+                    </li>
+                    <li>
+                        <h6>Add and remove users to user groups</h6>
+                    </li>
+                    <li>
+                        <h6>Granting permissions to user groups</h6>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -49,41 +72,32 @@ title: "[The Platform] - Help"
 <section>
     <div class="container">
         <div class="row">
-            <div class="col-sm-12">
-                <h2>Collecting data</h2>
-                <ul class="tutorial-links">
-                    <li>Collecting data with Community Maps</li>
-                    <li>Collection data with EpiCollect+</li>
-                </ul>
-            </div>
-        </div>
-    </div>
-</section>
-
-<section>
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-12">
+            <div class="col-sm-6">
                 <h2>Running the platform on your own servers</h2>
                 <ul class="tutorial-links">
-                    <li>How to install</li>
-                    <li>How to update</li>
+                    <li>
+                        <h6><a href="{{site.url}}help/how-to-install.html">How to install</a></h6>
+                        <p>A complete guide to installing [the platform] on a Debian system with Apache and mod_wsgi.</p>
+                    </li>
                 </ul>
             </div>
-        </div>
-    </div>
-</section>
 
-<section>
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-12">
+            <div class="col-sm-6">
                 <h2>Building an app using the API</h2>
                 <ul class="tutorial-links">
-                    <li>Getting started with OAuth</li>
-                    <li>How to obtain OAuth tokens for your app</li>
-                    <li>Read the docs</li>
-                </ul>    
+                    <li>
+                        <h6><a href="{{site.url}}help/register-your-app.html">Register your app</a></h6>
+                        <p>Before you can use our API you need to register your app.</p>
+                    </li>
+                    <li>
+                        <h6><a href="{{site.url}}help/getting-started-with-oauth.html">Getting started with OAuth</a></h6>
+                        <p>Learn how to obtain OAuth tokens and how to sign your request to authenticate and authorise users.</p>
+                    </li>
+                    <li>
+                        <h6><a href="{{site.url}}docs/">Read the API docs</a></h6>
+                        <p>Find out which API endpoints to use to get information on projects and how to add, read and update contributions.</p>
+                    </li>
+                </ul>
             </div>
         </div>
     </div>
