Active inactive project FAQ

--- a/help/index.html
+++ b/help/index.html
@@ -40,28 +40,33 @@ title: "[The Platform] - Help"
                 <h2>Managing projects</h2>
                 <ul class="tutorial-links">
                     <li>
-                        <h6><a href="project-settings.html">Project settings</a></h6>
-                    </li>
-                    <li>
                         <h6><a href="category-display.html">Category display settings</a></h6>
                         <p>Define how your contributions will be displayed on the map.</p>
-                    </li>
-                    <li>
-                        <h6><a href="category-settings.html">Category settings</a></h6>
                     </li>
                     <li>
                         <h6><a href="field-types.html">Field types</a></h6>
                         <p>Learn about different field types and what you can do with them.</p>
                     </li>
                     <li>
-                        <h6><a href="field-settings.html">Field settings</a></h6>
-                        <p>Learn about which settings you can change for your field.</p>
-                    </li>
-                    <li>
                         <h6>Add and remove users to user groups</h6>
                     </li>
                     <li>
                         <h6>Granting permissions to user groups</h6>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-6">
+                <h2>Frequently asked questions</h2>
+                <ul class="tutorial-links">
+                    <li>
+                        <h6><a href="{{site.url}}help/faq-active-inactive-projects.html">What's the difference between active and inactive projects?</a></h6>
                     </li>
                 </ul>
             </div>
