User group permissions

--- a/help/index.html
+++ b/help/index.html
@@ -48,10 +48,10 @@ title: "[The Platform] - Help"
                         <p>Learn about different field types and what you can do with them.</p>
                     </li>
                     <li>
-                        <h6>Add and remove users to user groups</h6>
+                        <h6><a href="add-remove-users.html">Add and remove users to and from user groups</a></h6>
                     </li>
                     <li>
-                        <h6>Granting permissions to user groups</h6>
+                        <h6><a href="granting-permissions-to-usergroups.html">Granting permissions to user groups</a></h6>
                     </li>
                 </ul>
             </div>
