--- a/help/index.html
+++ b/help/index.html
@@ -40,7 +40,7 @@ title: "[The Platform] - Help"
                 <h2>Managing projects</h2>
                 <ul class="tutorial-links">
                     <li>
-                        <h6><a href="category-display.html">Category display settings</a></h6>
+                        <h6><a href="category-display-settings.html">Category display settings</a></h6>
                         <p>Define how your contributions will be displayed on the map.</p>
                     </li>
                     <li>
