Granting permissions to data

--- a/help/index.html
+++ b/help/index.html
@@ -31,7 +31,8 @@ title: "[The Platform] - Help"
                         <p>Learn how to add fields to your category.</p>
                     </li>
                     <li>
-                        <h6>How users can access the data in your project</h6>
+                        <h6><a href="how-users-access-data.html">How users can access the data in your project</a></h6>
+                        <p>Learn how to set up data groupings and user groups to define who can access your data.</p>
                     </li>
                 </ul>
             </div>
