--- a/help/index.html
+++ b/help/index.html
@@ -69,6 +69,9 @@ title: "[The Platform] - Help"
                     <li>
                         <h6><a href="{{site.url}}help/faq-active-inactive-projects.html">What's the difference between active and inactive projects?</a></h6>
                     </li>
+                    <li>
+                        <h6><a href="{{site.url}}help/faq-active-inactive-categories-fields.html">What's the difference between active and inactive categories and fields?</a></h6>
+                    </li>
                 </ul>
             </div>
         </div>
