--- a/communities/index.html
+++ b/communities/index.html
@@ -6,8 +6,12 @@ title: "[The Platform] - Start mapping today"
 <header>
     <div class="container">
         {% include nav.html %}
-        <h1>Communities</h1>
-        <p>Learn how to set up your own projects and how to use the collected data.</p>  
+        <div class="row">
+            <div class="col-sm-6">
+                <h1>Communities</h1>
+                <p>Learn how to set up your own projects and how to use the collected data.</p>  
+            </div>
+        </div>
     </div>
 </header>
 
