--- a/developers/index.html
+++ b/developers/index.html
@@ -6,8 +6,12 @@ title: "[The Platform] - Build your own app"
 <header>
     <div class="container">
         {% include nav.html %}
-        <h1>Developers</h1>
-        <p>The Platform is 100% open source. You can deploy it on your own servers, extend it or build an app on top of the API.</p>
+        <div class="row">
+            <div class="col-sm-6">
+                <h1>Developers</h1>
+                <p>The Platform is 100% open source. You can deploy it on your own servers, extend it or build an app on top of the API.</p>
+            </div>
+        </div>
     </div>
 </header>
 
