--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 ---
 layout: default
-title: Community Maps
+title: The Platform
 ---
 
 <header class="main">
+        {% include nav.html %}
     <div class="hero">
-        <h1>{{site.name}}</h1>
+        <h1>The Platform</h1>
         <p>Create maps for public good</p>
     </div>
 </header>
@@ -61,7 +62,7 @@ title: Community Maps
             </div>
         </div>
 
-        <div class="row" id="devs">
+        <!-- <div class="row" id="devs">
             <div class="col-sm-12">
                 <h2><span>Meet the team</span></h2>
                 <ul>
@@ -78,6 +79,6 @@ title: Community Maps
 
                 </ul>
             </div>
-        </div>
+        </div> -->
     </div>
 </section>
