--- a/developers/index.html
+++ b/developers/index.html
@@ -8,12 +8,23 @@ title: "[The Platform] - Build your own app"
         {% include nav.html %}
         <div class="row">
             <div class="col-sm-6">
-                <h1>Developers</h1>
+                <h1>For developers</h1>
                 <p>The Platform is 100% open source. You can deploy it on your own servers, extend it or build an app on top of the API.</p>
             </div>
         </div>
     </div>
 </header>
+
+<section>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-6">
+                <h2><span class="mega-octicon octicon-milestone"></span> <a href="{{site.url}}help/getting-started.html">Getting started</a></h2>
+                <p>Get to know [the platform] and its componets. Learn what projects, categories and data groupings are and how they are connected.</p>
+            </div>
+        </div>
+    </div>
+</section>
 
 <section>
     <div class="container">
