--- a/help/index.html
+++ b/help/index.html
@@ -10,25 +10,34 @@ title: "[The Platform] - Help"
     </div>
 </header>
 
+<section class="getting-started">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-6">
+                <h2><span class="mega-octicon octicon-milestone"></span> <a href="{{site.url}}help/getting-started.html">Getting started</a></h2>
+                <p>Get to know [the platform] and its componets. Learn what projects, categories and data groupings are and how they are connected.</p>
+            </div>
+        </div>
+    </div>
+</section>
+
 <section>
     <div class="container">
         <div class="row">
             <div class="col-sm-6">
-                <h2>Getting started</h2>
+                <h2><span class="mega-octicon octicon-puzzle"></span> Setting up projects</h2>
                 <ul class="tutorial-links">
                     <li>
-                        <h6><a href="getting-started.html">Getting started — An overview of the platform</a></h6>
-                        <p>Learn about what you can do with the platform and how you can set up projects.</p>
-                    </li>
-                    <li>
                         <h6><a href="how-to-create-project.html">How to create a new project</a></h6>
+                        <p>Projects are you starting point. Learn how to set up a mapping project for your community.</p>
                     </li>
                     <li>
                         <h6><a href="how-to-setup-categories.html">How to setup categories for data collection</a></h6>
+                        <p>Categories are your frame for data collection. You create one category for each data type.</p>
                     </li>
                     <li>
                         <h6><a href="how-to-create-field.html">How to create fields for a category</a></h6>
-                        <p>Learn how to add fields to your category.</p>
+                        <p>Add fields to your categories to define information you want to collect.</p>
                     </li>
                     <li>
                         <h6><a href="how-users-access-data.html">How users can access the data in your project</a></h6>
@@ -38,7 +47,7 @@ title: "[The Platform] - Help"
             </div>
 
             <div class="col-sm-6">
-                <h2>Managing projects</h2>
+                <h2><span class="mega-octicon octicon-tools"></span> Managing projects</h2>
                 <ul class="tutorial-links">
                     <li>
                         <h6><a href="category-display-settings.html">Category display settings</a></h6>
@@ -64,7 +73,7 @@ title: "[The Platform] - Help"
     <div class="container">
         <div class="row">
             <div class="col-sm-6">
-                <h2>Frequently asked questions</h2>
+                <h2><span class="mega-octicon octicon-question"></span> Frequently asked questions</h2>
                 <ul class="tutorial-links">
                     <li>
                         <h6><a href="{{site.url}}help/faq-active-inactive-projects.html">What's the difference between active and inactive projects?</a></h6>
@@ -82,7 +91,7 @@ title: "[The Platform] - Help"
     <div class="container">
         <div class="row">
             <div class="col-sm-6">
-                <h2>Running the platform on your own servers</h2>
+                <h2><span class="mega-octicon octicon-gear"></span> Running the platform on your own servers</h2>
                 <ul class="tutorial-links">
                     <li>
                         <h6><a href="{{site.url}}help/how-to-install.html">How to install</a></h6>
@@ -92,7 +101,7 @@ title: "[The Platform] - Help"
             </div>
 
             <div class="col-sm-6">
-                <h2>Building an app using the API</h2>
+                <h2><span class="mega-octicon octicon-code"></span> Building an app using the API</h2>
                 <ul class="tutorial-links">
                     <li>
                         <h6><a href="{{site.url}}help/register-your-app.html">Register your app</a></h6>
