--- a/communities/index.html
+++ b/communities/index.html
@@ -8,7 +8,7 @@ title: "[The Platform] - Start mapping today"
         {% include nav.html %}
         <div class="row">
             <div class="col-sm-6">
-                <h1>Communities</h1>
+                <h1>For communities</h1>
                 <p>Learn how to set up your own projects and how to use the collected data.</p>  
             </div>
         </div>
@@ -18,14 +18,9 @@ title: "[The Platform] - Start mapping today"
 <section>
     <div class="container">
         <div class="row">
-            <div class="col-sm-12">
-                <h2>Set up your own mapping projects</h2>
-                <ul>
-                    <li><a href="#">Create a new project</a></li>
-                    <li><a href="#">Define forms to collect data</a></li>
-                    <li><a href="#">Define maps to provide access to your data</a></li>
-                    <li><a href="#">Grant permissions to users</a></li>
-                </ul>
+            <div class="col-sm-6">
+                <h2><span class="mega-octicon octicon-milestone"></span> <a href="{{site.url}}help/getting-started.html">Getting started</a></h2>
+                <p>Get to know [the platform] and its componets. Learn what projects, categories and data groupings are and how they are connected.</p>
             </div>
         </div>
     </div>
@@ -34,11 +29,45 @@ title: "[The Platform] - Start mapping today"
 <section>
     <div class="container">
         <div class="row">
-            <div class="col-sm-12">
-                <h2>Collect data</h2>
-                <ul>
-                    <li><a href="#">Collect data using EpiCollect+</a></li>
-                    <li><a href="#">Collect data using Community Maps</a></li>
+            <div class="col-sm-6">
+                <h2><span class="mega-octicon octicon-puzzle"></span> Setting up projects</h2>
+                <ul class="tutorial-links">
+                    <li>
+                        <h6><a href="how-to-create-project.html">How to create a new project</a></h6>
+                        <p>Projects are you starting point. Learn how to set up a mapping project for your community.</p>
+                    </li>
+                    <li>
+                        <h6><a href="how-to-setup-categories.html">How to setup categories for data collection</a></h6>
+                        <p>Categories are your frame for data collection. You create one category for each data type.</p>
+                    </li>
+                    <li>
+                        <h6><a href="how-to-create-field.html">How to create fields for a category</a></h6>
+                        <p>Add fields to your categories to define information you want to collect.</p>
+                    </li>
+                    <li>
+                        <h6><a href="how-users-access-data.html">How users can access the data in your project</a></h6>
+                        <p>Learn how to set up data groupings and user groups to define who can access your data.</p>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="col-sm-6">
+                <h2><span class="mega-octicon octicon-tools"></span> Managing projects</h2>
+                <ul class="tutorial-links">
+                    <li>
+                        <h6><a href="category-display-settings.html">Category display settings</a></h6>
+                        <p>Define how your contributions will be displayed on the map.</p>
+                    </li>
+                    <li>
+                        <h6><a href="field-types.html">Field types</a></h6>
+                        <p>Learn about different field types and what you can do with them.</p>
+                    </li>
+                    <li>
+                        <h6><a href="add-remove-users.html">Add and remove users to and from user groups</a></h6>
+                    </li>
+                    <li>
+                        <h6><a href="granting-permissions-to-usergroups.html">Granting permissions to user groups</a></h6>
+                    </li>
                 </ul>
             </div>
         </div>
