--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 ---
 layout: default
-title: The Platform
+title: GeoKey
 ---
 
 <header class="main">
         {% include nav.html %}
     <div class="hero">
-        <h1>The Platform</h1>
+        <h1>GeoKey</h1>
         <p>Create maps for public good</p>
     </div>
 </header>
@@ -15,13 +15,13 @@ title: The Platform
     <div class="container">
         <div class="row">
             <div class="col-sm-6">
-                <h2><span>Communities</span> Create your own map</h2>
+                <h2><span>For communities</span> Create a map for your community</h2>
                 <p>Whether you want to map the history of your neighbourhood, collect data to identify issues that should be fixed by your local government or simply map hidden gems in your area&mdash;[The platform] can help.</p>
                 <p><a href="{{site.url}}communities/" class="btn">Start mapping today</a></p>
             </div>
 
             <div class="col-sm-6">
-                <h2><span>Developers</span> Build mobile and web apps</h2>
+                <h2><span>For developers</span> Build mobile and web apps</h2>
                 <p>Use our public API to create your own mobile app to collect data, visualise your data in a GIS or run complex statistical analysis on your data.</p>
                 <p><a href="{{site.url}}developers/" class="btn">Start coding</a></p>
             </div>
