--- a/help/index.html
+++ b/help/index.html
@@ -3,9 +3,9 @@ layout: default
 title: "[The Platform] - Help"
 ---
 
-<header>
+<header  id="header-help">
+    {% include nav.html %}
     <div class="container">
-        {% include nav.html %}
         <h1>Help</h1>
     </div>
 </header>
