--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title: GeoKey
 ---
 
-<header class="main">
+<header class="main" id="home">
         {% include nav.html %}
     <div class="hero">
         <h1>GeoKey</h1>
