--- a/communities/index.html
+++ b/communities/index.html
@@ -3,9 +3,9 @@ layout: default
 title: "[The Platform] - Start mapping today"
 ---
 
-<header>
-    <div class="container">
-        {% include nav.html %}
+<header id="header-communities">
+    {% include nav.html %}
+    <div class="container">    
         <div class="row">
             <div class="col-sm-6">
                 <h1>For communities</h1>
