--- a/developers/index.html
+++ b/developers/index.html
@@ -3,7 +3,7 @@ layout: default
 title: "[The Platform] - Build your own app"
 ---
 
-<header>
+<header id="header-developers">
     <div class="container">
         {% include nav.html %}
         <div class="row">
